<resources>
    <string name="app_name">Perpustakaan</string>
    <string name="premium">premium</string>
    <string name="detail">Detail</string>
    <string name="judul">JUDUL</string>
    <string name="penulis">PENULIS</string>
    <string name="penerbit">PENERBIT</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="pinjam">PINJAM</string>
    <string name="sssax">Judul :</string>
    <string name="rilis">Rilis :</string>
    <string name="tanggal_rilis">TANGGAL RILIS</string>
    <string name="asdasd">Penulis :</string>
    <string name="asdasdxc">PENULIS</string>
    <string name="asdadcs">Penerbit :</string>
    <string name="gdfgdf">PENERBIT</string>
    <string name="dfgdfg">Sinopsis :</string>
    <string name="qweqw">Sinopsis</string>
    <string name="xcvxcv">Detail</string>
    <string name="asczxc">PINJAM</string>
    <string name="welcome">Welcome,</string>
    <string name="nama">nama</string>
    <string name="list_buku_tersedia">List buku tersedia</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="logout">LOGOUT</string>
    <string name="belum_meminjam_buku">BELUM MEMINJAM BUKU</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="konfirmasi_password">konfirmasi password</string>
    <string name="daftar">daftar</string>
    <string name="register_npremium">Register \nPREMIUM</string>
    <string name="deadline">Deadline :</string>
    <string name="hari">Hari</string>
    <string name="todo">TODO</string>
</resources>