<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:id="@+id/txtLangganan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageBuku1"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageBuku1"
            android:id="@+id/txtJudul"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_rilis"
            android:textSize="20sp"
            android:textColor="#0DB3CF"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/txtJudul"
            android:id="@+id/txtTanggal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penulis"
            android:textSize="20sp"
            android:textColor="#F4B514"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/txtTanggal"
            android:id="@+id/txtPenulis"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penerbit"
            android:textSize="20sp"
            android:textColor="#14C7F4"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/txtPenulis"
            android:id="@+id/txtPenerbit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis"
            android:textSize="16sp"
            android:textColor="#3FBC54"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/txtPenerbit"
            android:id="@+id/txtSinopsis"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pinjam"
            android:id="@+id/btnPinjam"
            android:layout_below="@id/txtSinopsis"/>

    </RelativeLayout>








</ScrollView>