<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".view.HomeActivity">

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_baseline_account_circle_24"
        android:id="@+id/btnProfile"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/welcome"
        android:id="@+id/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/welcome"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/txtNama"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_buku_tersedia"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/home"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        tools:ignore="RelativeOverlap" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home"
        android:id="@+id/rv_item"/>



</RelativeLayout>